# HomeWPy2

task2/: Untitled.ipynb  pyproject.toml
