[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["kultyshev.denis <kultyshev.denis@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyterlab = "^4.0.7"
notebook = "^7.0.5"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
